# Py_Trip_Planner

./: .gitignore  Dockerfile  README.md  TripPlanner.ipynb  app.py  brd.md  development-plan.md  requirements.txt  tech-stack.md  valid_coords.csv
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  install_dependencies.sh  requirements.txt
.github/workflows/: Dash_GHA_MultiArch.yml  ci-cd-dockerhub.yml  ci-cd.yml
Deploy/: Docker-compose.yml  README.md
Development/: V2.py  readme.md
Tests/: app.py  dash_chat_test.py  langchain_pandasDF.ipynb  readme.md  requirements.txt
app/: about.html  app.py
app/helpers/: plot_weather.py  update_logic.py
images/: Temperature-Trend.html  readme.md
poc-trip-planner-v4/: .gitignore  Dockerfile  brd.md  development-plan.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  readme.md  tailwind.config.ts  tech-stack.md  tsconfig.tsbuildinfo
poc-trip-planner-v4/app/: globals.css  layout.tsx  page.tsx
poc-trip-planner-v4/components/: HomeClient.tsx  StationInfo.tsx  WeatherBackground.tsx
poc-trip-planner-v4/hooks/: useForecastData.ts  useHistoricalData.ts
poc-trip-planner-v4/lib/: cache.ts  exportChart.ts  geo.ts  meteostat.ts  schemas.ts  types.ts
poc-vibe-weather/: .env.example  docker-compose.yml  readme.md
poc-vibe-weather/backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
poc-vibe-weather/backend/app/: main.py  models.py
poc-vibe-weather/backend/app/routers/: geocode.py  stations.py  weather.py
(+151 files in other folders)
