[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "fastapi-cache2==0.2.2",
    "httpx==0.28.1",
    "meteostat==1.6.8",
    "numpy==2.2.1",
    "openmeteo-py==0.0.1",
    "pandas==2.2.3",
    "pydantic==2.10.3",
    "uvicorn[standard]==0.32.1",
]
